# Grid-L-Systems

./: Cargo.toml  README.md
GLS_Evolve/: Cargo.toml
GLS_Evolve/saves/: bazgroly.gls  test.gls  test2.gls
GLS_Evolve/src/: controls.rs  drawing.rs  edit_tab.rs  files.rs  grow_tab.rs  main.rs
gls_evolve/: Cargo.toml
gls_evolve/saves/: human.gls  humansolved.gls  tabliczki.gls
gls_evolve/src/: edit_tab.rs  evolve_tab.rs  files.rs  ls_evolve.rs  main.rs  ui.rs
src/: cell.rs  controls.rs  drawing.rs  edit_tab.rs  evolve_tab.rs  grid.rs  grow_tab.rs  l_system.rs  lib.rs  ls_evolve.rs  main.rs  rule.rs  state.rs  tabs.rs  ui.rs
src/genetic_algorithm/: evolve.rs  mod.rs
src/l_system/: cell.rs  grid.rs  mod.rs  ruleset.rs
src/templates/: body.txt  circle.txt  cross-circle.txt  cross.txt  smiley.txt
