[package]
name = "soft_evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
egui-macroquad = { git = "https://github.com/gre-v-el/egui-macroquad-updated.git" }