[package]
name = "gls_evolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
egui-macroquad = { git = "https://github.com/gre-v-el/egui-macroquad-updated.git" }
soft_evolution = { path = "../" }